--- a/helixcore/HelixCore.vcxproj
+++ b/helixcore/HelixCore.vcxproj
@@ -81,12 +81,19 @@
     <ClInclude Include="src\HelixCore\Build\Build.h" />
     <ClInclude Include="src\HelixCore\Assert\Assert.h" />
     <ClInclude Include="src\HelixCore\CoreEngine.h" />
+    <ClInclude Include="src\HelixCore\File\FileAccess.h" />
+    <ClInclude Include="src\HelixCore\File\FileBinStream.h" />
+    <ClInclude Include="src\HelixCore\Logger\LogCategory.h" />
     <ClInclude Include="src\HelixCore\Logger\Logger.h" />
+    <ClInclude Include="src\HelixCore\Logger\LogHandler.h" />
     <ClInclude Include="src\HelixCore\Type\Type.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\HelixCore\Logger\LogCategory.cpp" />
     <ClCompile Include="src\HelixCore\Assert\Assert.cpp" />
+    <ClCompile Include="src\HelixCore\File\FileBinStream.cpp" />
     <ClCompile Include="src\HelixCore\Logger\Logger.cpp" />
+    <ClCompile Include="src\HelixCore\Logger\LogHandler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
