--- a/helixcore/HelixCore.vcxproj.filters
+++ b/helixcore/HelixCore.vcxproj.filters
@@ -30,12 +30,33 @@
     <ClInclude Include="src\HelixCore\Logger\Logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\HelixCore\File\FileBinStream.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelixCore\File\FileAccess.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelixCore\Logger\LogHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelixCore\Logger\LogCategory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\HelixCore\Assert\Assert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\HelixCore\Logger\Logger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelixCore\File\FileBinStream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelixCore\Logger\LogHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelixCore\Logger\LogCategory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
