--- a/helixgraphics/HelixGraphics.vcxproj
+++ b/helixgraphics/HelixGraphics.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="src\HelixGraphics\glad.c" />
     <ClCompile Include="src\HelixGraphics\GraphicsApplication.cpp" />
     <ClCompile Include="src\HelixGraphics\Shader\ElementBufferObject.cpp" />
+    <ClCompile Include="src\HelixGraphics\Shader\IShader.h" />
     <ClCompile Include="src\HelixGraphics\Shader\VertexArrayObject.cpp" />
     <ClCompile Include="src\HelixGraphics\Shader\VertexBufferObject.cpp" />
   </ItemGroup>
